# custodian-codex-guard

./: README.md  pyproject.toml
custodian/codex_guard/: __init__.py  approvals.py  cli.py  guard.py  mcp_server.py  receipts.py
custodian/codex_guard/bundled_plugin/.agents/plugins/: marketplace.json
custodian/codex_guard/bundled_plugin/plugins/custodian-codex-guard/: .mcp.json
custodian/codex_guard/bundled_plugin/plugins/custodian-codex-guard/skills/govern-codex/: SKILL.md
docs/: CODEX_GUARD.md
plugins/custodian-codex-guard/: README.md
plugins/custodian-codex-guard/.codex-plugin/: plugin.json
scripts/: codex-guard-demo.py
tests/: test_codex_guard.py  test_codex_guard_cli.py  test_codex_policy_wiring.py
