[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custodian-codex-guard"
version = "0.1.0"
description = "Custodian Guard for OpenAI Codex — typed action risk classification, fail-closed enforcement, and hash-chained receipts for Codex tool calls."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
    {name = "InovinLabs", email = "hello@inovinlabs.com"},
]
keywords = ["ai", "agent", "codex", "openai", "security", "guardrails", "mcp"]
dependencies = [
    # 0.4.0 (the control-plane release this adapter needs) is not on PyPI
    # yet -- PyPI's custodian-kernel tops out at 0.3.1, which predates the
    # control plane. Pinned to the exact commit this was built and verified
    # against; switch to a plain PyPI version constraint once 0.4.0 ships.
    "custodian-kernel @ git+https://github.com/KeyArgo/custodian-kernel.git@be8eaf9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://getcustodian.xyz"
Repository = "https://github.com/KeyArgo/custodian-codex-guard"
"Custodian kernel" = "https://github.com/KeyArgo/custodian-kernel"

[project.optional-dependencies]
# Codex Guard itself never imports paladin (see custodian-kernel's own
# architecture-boundary test -- the kernel and its adapters stay
# brand-neutral; paladin:// is only ever regex-detected, never resolved
# here). This extra exists purely to pass the choice through: install with
# `pip install -e ".[paladin]"` if you also want the credential vault/egress
# broker custodian-kernel itself ships as an optional extra.
paladin = [
    "custodian-kernel[paladin] @ git+https://github.com/KeyArgo/custodian-kernel.git@be8eaf9",
]
dev = [
    "pytest",
]

[project.scripts]
custodian-codex-guard-mcp = "custodian.codex_guard.mcp_server:main"
custodian-codex = "custodian.codex_guard.cli:main"

[tool.setuptools.packages.find]
include = ["custodian.codex_guard*"]
namespaces = true

[tool.setuptools.package-data]
"custodian.codex_guard" = ["*.md"]
